src/assets/scss/components/_blog-controls.scss
.blog-controls {

  z-index: 1;
  bottom: calc(#{$blog-controls-margin-bottom} + 9vh);
  position: absolute;
  left: 50%;
  transform: translateX(-50%);

  .blog-search-button {
    position: absolute;
    left: 0;
    display: flex;
    align-items: center;
    height: $blog-controls-line-height;
    width: $blog-controls-search-width;
    background: transparent;
    border: 0;

    .search-icon {
      fill: #fff;
      width: $blog-controls-line-height;
      height: $blog-controls-line-height;
      margin: 0 auto;
    }
  }

  .blog-filter {
    margin-left: $blog-controls-search-width + $blog-controls-search-margin;

    .selected {
      width: $blog-controls-item-width;
      padding: 0 $blog-controls-horizontal-padding;

      &:after {
        position: absolute;
        right: $blog-controls-horizontal-padding;
        top: 50%;
        content: "";
        display: block;
        width: 13px;
        height: 10px;
        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="13" height="10" viewBox="0 0 13 10"><path d="M 0 0 L 7 10 L 13 0 Z" fill="#333333" /></svg>');
        transform: translateY(-50%);
      }
    }
    .selected,
    .dropdown li {
      cursor: pointer;
      height: $blog-controls-line-height;
      line-height: $blog-controls-line-height;
      background-color: #fff;
    }
  }

  @include susy-breakpoint($bp-medium, $susy) {

    bottom: calc(#{$blog-controls-margin-bottom} - #{$blog-margin-offset});

    .blog-filter {
      position: relative;

      .selected {
        width: $blog-controls-item-width;
      }
    }
  }

}

